--- a/Synopsis/content.tex
+++ b/Synopsis/content.tex
@@ -21,7 +21,6 @@
 
 \textbf{Объем и структура работы.} Диссертация состоит из введения, четырёх разделов и заключения. Полный объём диссертации составляет 152 страницы, включая 26 рисунков и 54 таблицы. Список литературы содержит 94 наименования.
 
-\newpage
 \begin{center}
 	{\fontsize{11}{13}\selectfont \textbf{Содержание работы} \vspace{-1.5ex}}
 \end{center}
@@ -497,9 +496,47 @@ P(H_i|A_k^{\Delta Z}) = \frac{P(H_i) P(A_k|H_i) P(\Delta Z|H_i)}{\sum_{j=1}^M P(
 
 % При использовании пакета \verb!biblatex! список публикаций автора по теме диссертации формируется в разделе <<\publications>>\ файла \verb!common/characteristic.tex!  при помощи команды \verb!\nocite!
 
+
 \begin{center}
 	{\fontsize{11}{13}\selectfont \textbf{Публикации автора по теме диссертации}}
 \end{center} 
+
+\noindent
+\textit{Публикации в научных изданиях, входящих в перечень ВАК:}
+\medskip
+
+\begin{enumerate}[wide, labelindent=0pt, leftmargin=*]
+	\item[1.] \label{korsun2016automatic} \textit{Полиев, А. В.} Автоматическое выделение фонетически однородных участков в словах естественного языка на основе многопараметрической оптимизации / А. В. Полиев, О. Н. Корсун // Известия Российской академии наук. Теория и системы управления. — 2016. — № 4. — С. 115—124.
+	\item[2.] \label{poliyev2017pca} \textit{Полиев, А. В.} Разработка алгоритма синтеза оптимальных эталонов на основе метода главных компонент / А. В. Полиев // Cloud of science. — 2017. — т. 4, № 4. — С. 650—661.
+	\item[3.] \label{korsun2018usage} \textit{Полиев, А. В.} Использование нескольких эталонов при распознавании речи: формула Байеса и метод комитетов / А. В. Полиев, О. Н. Корсун // Вестник компьютерных и информационных технологий. — 2018. — т. 163, № 1. — С. 14—23.
+\end{enumerate}
+
+\bigskip
+\noindent
+\textit{Публикации в научных изданиях, индексируемых в международных системах цитирования Scopus и Web of Science:}
+\medskip
+
+\begin{enumerate}[wide, labelindent=0pt, leftmargin=*]
+	\item[4.] \label{korsun2018optimal} \textit{Poliyev, A. V.} Optimal pattern synthesis for speech recognition based on principal component analysis / A. V. Poliyev, O. N. Korsun // IOP Conference Series: Materials Science and Engineering. Vol. 312. — IOP Publishing. 2018. — P. 12—14.
+\end{enumerate}
+
+\bigskip
+\noindent
+\textit{Публикации по теме диссертации в других научных изданиях:}
+\medskip
+
+\begin{enumerate}[wide, labelindent=0pt, leftmargin=*]
+	\item[5.] \label{poliyev2015pca} \textit{Полиев, А. В.} Получение оптимального эталона с помощью метода главных компонент / А. В. Полиев, О. Н. Корсун // Всероссийская научно-техническая конференция «Научные чтения по авиации, посвящённые памяти Н.Е. Жуковского». — Общество с ограниченной ответственностью «Экспериментальная мастерская НаукаСофт». 2015. — С. 455—459.
+	\item[6.] \label{poliyev2015split} \textit{Полиев, А. В.} Алгоритм разбиения слов на однородные части в интересах разработки речевого интерфейса бортового оборудования / А. В. Полиев, О. Н. Корсун // Восьмой Международный Аэрокосмический Конгресс IAC’15. — АИР. 2015. — С. 178—180.
+	\item[7.] \label{poliyev2016dynamic} \textit{Полиев, А. В.} Разработка модифицированного алгоритма динамического программирования для разбиения слов на однородные части / А. В. Полиев, О. Н. Корсун // Всероссийская научно-техническая конференция «Научные чтения по авиации, посвящённые памяти Н.Е. Жуковского». — Общество с ограниченной ответственностью «Экспериментальная мастерская НаукаСофт». 2016. — С. 194—201.
+	\item[8.] \label{poliyev2016split} \textit{Полиев, А. В.} Определение оптимального разбиения слова на однородные участки на основе матрицы корреляционного портрета / А. В. Полиев, О. Н. Корсун // Юбилейная Всероссийская научно-техническая конференция «Авиационные системы в XXI веке». — Государственный научно-исследовательский институт авиационных систем. 2016. — С. 162.
+	\item[9.] \label{poliyev2017split} \textit{Полиев, А. В.} Определение границ однородных участков слова на основе матрицы корреляционного портрета / А. В. Полиев // Юбилейная Всероссийская научно-техническая конференция «Авиационные системы в XXI веке». — Государственный научно-исследовательский институт авиационных систем. 2017. — С. 368—375.
+	\item[10.] \label{poliyev2016natural} \textit{Полиев, А. В.} Разработка метода анализа фонетически однородных частей слов естественного языка / А. В. Полиев, О. Н. Корсун // Вторая Международная научно-практическая конференция «Эрго-2016: Человеческий фактор в сложных технических системах и средах». — Межрегиональная эргономическая ассоциация. 2016. — С. 370—377.
+	\item[11.] \label{poliyev2016pca} \textit{Poliyev, A. V.} The algorithm of an optimal word pattern synthesis using principal component analysis / A. V. Poliyev // Workshop on Contemporary materials and technologies in the aviation industry - CMTAI. –– 2016.
+	\item[12.] \label{poliyev2017bayes} \textit{Полиев, А. В.} Применение формулы Байеса для распознавания слов с использованием нескольких эталонов / А. В. Полиев, О. Н. Корсун // Всероссийская научно-техническая конференция «Навигация, наведение и управление летательными аппаратами». — Издательство «Научтехлитиздат». 2017. — С. 114—116.
+	\item[13.] \label{poliyev2018cnn} \textit{Полиев, А. В.} Разработка алгоритма распознавания слов в условиях шума на основе сверточных нейронных сетей / А. В. Полиев, О. Н. Корсун // Девятый Международный Аэрокосмический Конгресс IAC’18. — АИР. 2018. — С. 124—126.
+	\item[14.] \label{poliyev2018cnn2} \textit{Полиев, А. В.} Распознавание речевых команд на основе сверточных нейронных сетей / А. В. Полиев, О. Н. Корсун // III Всероссийская научно-техническая конференция «Моделирование авиационных систем». — Государственный научно-исследовательский институт авиационных систем. 2018. — С. 261.
+\end{enumerate}
 
 \ifdefmacro{\microtypesetup}{\microtypesetup{protrusion=false}}{} % не рекомендуется применять пакет микротипографики к автоматически генерируемому списку литературы
 \urlstyle{rm}                               % ссылки URL обычным шрифтом
