--- a/Synopsis/title.tex
+++ b/Synopsis/title.tex
@@ -67,21 +67,18 @@
                               \textbf{\supervisorFio}\par
                               \fi
                               \supervisorRegalia,\par
-                              \supervisorJobPlace,\par
-                              \supervisorJobPost\par
+                              \supervisorJobPost \, \supervisorJobPlace\par
                               \vspace{0.013\paperheight}\\
     \fi
     Официальные оппоненты:  &
     \ifnumequal{\value{showopplead}}{0}{\vspace{13\onelineskip plus1fill}}{%
         \textbf{\opponentOneFio,}\par
         \opponentOneRegalia,\par
-        \opponentOneJobPlace,
-        \opponentOneJobPost\par
+        \opponentOneJobPost \, \opponentOneJobPlace\par
         \vspace{0.01\paperheight}
         \textbf{\opponentTwoFio,}\par
         \opponentTwoRegalia,\par
-        \opponentTwoJobPlace,
-        \opponentTwoJobPost
+        \opponentTwoJobPost \, \opponentTwoJobPlace
     \ifdefined\opponentThreeFio
         \par
         \vspace{0.01\paperheight}
@@ -107,7 +104,7 @@
 \noindent С диссертацией можно ознакомиться в библиотеке \synopsisLibrary.
 
 \vspace{0.008\paperheight plus1fill}
-\noindent Отзывы, заверенные печатью, просьба направлять по адресу: \defenseCouncilAddress, Ученый совет МАИ.
+\noindent Отзывы, заверенные печатью, просим направлять по адресу: \defenseCouncilAddress, Ученый совет МАИ.
 
 \vspace{0.008\paperheight plus1fill}
 \noindent{Автореферат разослан \synopsisDate.}
