--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,28 +1,5 @@
-\textbf{Актуальность темы.}
+\textbf{Актуальность темы исследования.}
 На сегодняшний день взаимодействие человека с компьютерными системами через управление речевыми командами является одним из самых удобных и перспективных форматов.
-
-% версия для автореферата
-Первая попытка конструирования системы автоматического распознавания речи была сделана в 1952 году, а уже в 1970-е годы исследования в области распознавания речи достигли значительных успехов.
-До настоящего времени распознавание речи совершенствовалось, а словарь распознаваемых слов вырос до нескольких десятков тысяч.
-Применение быстрых методов декодирования позволило производить распознавание в реальном времени.
-
-% версия для диссертации
-%Первая попытка конструирования системы автоматического распознавания речи была сделана в 1952 году в Bell Laboratories, США~\cite{davis1952automatic}.
-%Система с хорошим уровнем точности распознавала цифры от нуля до девяти, произнесённые диктором через телефонный автомат.
-%Значительные улучшения качества в области распознавания речи были достигнуты в 70-ых годах.
-%В то время технологии автоматического распознавания отдельных команд основывалась на работах Itakura в США~\cite{itakura1975minimum}, Sakoe и Chiba в Японии~\cite{sakoe1978dynamic} и Величкина и Загоруйка в СССР~\cite{velichko1970automatic}.
-%Советские учёные производили улучшения методов распознавания с помощью эталона.
-%Применение подхода динамического программирования было отличительной особенностью японского исследования.
-%Работа Itakura раскрыла метод кодирования линейного предсказания (Linear Predictive Coding, LPC), который успешно использовался в распознавании сигналов с низким битрейтом (количество битов информации, передаваемых в секунду).
-%В AT\&T Bell Laboratories были построены распознающие системы, обработка акустического сигнала в которых была основана на LPC анализе, а процесс распознавания проходил с использованием метода динамической трансформации времени (Dynamic Time Warping, DTW).
-%В 1980-х годах от подходов, основанных на применении эталонов, научные работы в области распознавания речи перешли к моделированию статистическими методами.
-%Использовались скрытые модели Маркова (Hidden Markov Models, HMM).
-%Работы Бейкера~\cite{baker1990stochastic} были одними из первых, в которых для решения задачи распознавания речи были применены HMM.
-%С 1990-х годов распознавание речи несколько усовершенствовалось.
-%Словарь распознаваемых слов вырос до нескольких десятков тысяч.
-%Использование быстрых методов декодирования позволило производить распознавание в реальном времени.
-%В современных дикторозависимых системах, распознающих отдельные слова, количество которых достигает двадцати тысяч слов, ошибки составляют менее 0.1~\%~\cite{das1993influence}.
-%И около 5~\% ошибок в независимых от диктора системах, которые распознают слитную речь из тысячи слов~\cite{aubert1993continuous}.
 
 В современных системах применяются 3 основные группы методов распознавания речи.
 Первая группа --- это скрытые марковские модели.
@@ -48,24 +25,55 @@
 С учётом этих требований широко используемые скрытые марковские модели не подходят из-за низкого качества распознавания в условиях шума.
 % версия для диссертации
 %С учётом этих требований широко используемые скрытые марковские модели не подходят из-за низкого качества распознавания в условиях шума \cite{korsun2013experimental}.
-
 Остальные две группы методов в настоящий момент не обеспечивают необходимой надёжности распознавания.
 По этой причине тема настоящей работы, направленной на совершенствование методов распознавания речевых команд с помощью сравнения с эталоном и с использованием нейронных сетей, является актуальной.
-Исследования, выполненные в рамках данной работы, направлены на решение таких практически значимых и актуальных задач, как предобработка входящего сигнала путём выделения однородных частей, улучшение качества эталонов с помощью выделения в них главных компонент и использование систем распознавания из нескольких эталонов.
-В работе также проведено обширное экспериментальное исследование всех разработанных методов на различных наборах входных данных с несколькими уровнями шума.
+
+Исследования, выполненные в рамках данной работы, направлены на решение таких практически значимых и актуальных задач, как предобработка входящего сигнала путём выделения однородных частей, улучшение качества эталонов с помощью выделения в них главных компонент, использование систем распознавания из нескольких эталонов, использование свёрточных нейронных сетей, обучаемых на выборке малого объёма.
+
+\textbf{Степень разработанности темы исследования.}
+% версия для автореферата
+Первая попытка конструирования системы автоматического распознавания речи была сделана в 1952 году в работе K.H. Davis, а уже в 1970-е годы исследования F. Itakura, H. Sakoe, S. Chiba, В.М. Величко, Н.Г. Загоруйко в области распознавания речи достигли значительных успехов.
+В 1980-х годах научные работы в области распознавания речи перешли к моделированию статистическими методами на основе скрытых марковских моделей (Hidden Markov Models, HMM).
+Работы J.K. Baker были одними из первых, в которых для решения задачи распознавания речи были применены HMM.
+С 1990-х годов распознавание речи несколько усовершенствовалось.
+Словарь распознаваемых слов вырос до нескольких десятков тысяч.
+Использование быстрых методов декодирования позволило производить распознавание в реальном времени.
+В современных дикторозависимых системах, распознающих отдельные слова ошибки составляют около 1.5--2.5~\%.
+И около 5~\% ошибок в независимых от диктора системах, которые распознают слитную речь.
+
+% версия для диссертации
+%Первая попытка конструирования системы автоматического распознавания речи была сделана в 1952 году в Bell Laboratories, США~\cite{davis1952automatic}.
+%Система с хорошим уровнем точности распознавала цифры от нуля до девяти, произнесённые диктором через телефонный автомат.
+%Значительные улучшения качества в области распознавания речи были достигнуты в 70-ых годах.
+%В то время технологии автоматического распознавания отдельных команд основывалась на работах Itakura в США~\cite{itakura1975minimum}, Sakoe и Chiba в Японии~\cite{sakoe1978dynamic} и Величко и Загоруйка в СССР~\cite{velichko1970automatic}.
+%Советские учёные производили улучшения методов распознавания с помощью эталона.
+%Применение подхода динамического программирования было отличительной особенностью японского исследования.
+%Работа Itakura раскрыла метод кодирования линейного предсказания (Linear Predictive Coding, LPC), который успешно использовался в распознавании сигналов с низким битрейтом (количество битов информации, передаваемых в секунду).
+%В AT\&T Bell Laboratories были построены распознающие системы, обработка акустического сигнала в которых была основана на LPC анализе, а процесс распознавания проходил с использованием метода динамической трансформации времени (Dynamic Time Warping, DTW).
+%В 1980-х годах от подходов, основанных на применении эталонов, научные работы в области распознавания речи перешли к моделированию статистическими методами.
+%Использовались скрытые марковские модели (Hidden Markov Models, HMM).
+%Работы Бейкера~\cite{baker1990stochastic} были одними из первых, в которых для решения задачи распознавания речи были применены HMM.
+%С 1990-х годов распознавание речи несколько усовершенствовалось.
+%Словарь распознаваемых слов вырос до нескольких десятков тысяч.
+%Использование быстрых методов декодирования позволило производить распознавание в реальном времени.
+%В современных дикторозависимых системах, распознающих отдельные слова, количество которых достигает двадцати тысяч слов, ошибки составляют менее 0.1~\%~\cite{das1993influence}.
+%И около 5~\% ошибок в независимых от диктора системах, которые распознают слитную речь из тысячи слов~\cite{aubert1993continuous}.
+
+При этом в настоящее время очень мало работ, которые исследуют методы распознавания отдельных команд с небольшим объёмом словаря.
+Также недостаточно изучены возможности обучения на выборке небольшого размера в методах распознавания, основанных на нейронных сетях глубокого обучения.
 
 \textbf{Объект и предмет исследования.}
 В работе в качестве объекта исследования рассматриваются речевые команды, а предметами исследования являются методы и алгоритмы распознавания речевых команд.
 
-\textbf{Целью} работы является повышение вероятности правильных распознаваний и снижение влияния акустических шумов, путём разработки алгоритмического обеспечения для распознавания команд речевого интерфейса кабины пилота в виде отдельных слов и фраз.
+\textbf{Целью исследования} является повышение вероятности правильных распознаваний и снижение влияния акустических шумов, путём разработки алгоритмического обеспечения для распознавания команд речевого интерфейса кабины пилота в виде отдельных слов и фраз.
 За рамками работы остались выбор оптимального состава команд и их интерпретация.
 
-Для достижения поставленной цели решаются следующие научно-технические задачи:
+Для достижения поставленной цели решаются следующие научно-технические \textbf{задачи}:
 \begin{itemize}
-	\item анализ статистических свойств речевых команд и их нормализация;
-	\item разработка алгоритмов предварительного разбиения записей на однородные части;
+	\item системный анализ статистических свойств речевой информации и её обработка для решения задачи управления и принятия решений при распознавании речевых команд;
+	\item разработка алгоритмов предварительного разбиения записей на однородные части в целях оптимизации процесса распознавания;
 	\item разработка алгоритмов исключения шума и выделения наиболее значимых компонент в эталоне;
-	\item исследование статистических закономерностей верного и неверного распознавания речевых команд и их использование для уменьшения количества ошибок;
+	\item исследование статистических закономерностей верного и неверного распознавания речевой информации и их использование для уменьшения количества ошибок;
 	\item разработка алгоритмов использования нескольких эталонов одного слова для улучшения качества распознавания;
 	\item исследование современных типов и архитектур искусственных нейронных сетей глубокого обучения для применения в задаче распознавания речевых команд.
 \end{itemize}
@@ -73,47 +81,78 @@
 \textbf{Методология и методы исследования.}
 Основными методами исследования, используемыми в работе, являются: анализ данных, цифровая обработка сигналов, теория вероятностей, математическая статистика, численная оптимизация, проектирование программных средств.
 
-\textbf{Научная новизна} заключается в разработке совокупности алгоритмов, обеспечивающих повышение вероятности правильных распознаваний команд речевого интерфейса кабины пилота:
+\textbf{Научная новизна} работы заключается в разработке совокупности алгоритмов, обеспечивающих повышение вероятности правильных распознаваний команд речевого интерфейса кабины пилота:
 \begin{itemize}
 	\item алгоритм разбиения речевых команд на фонетически однородные части на основе модифицированного метода динамического программирования;
-	\item алгоритм оптимизации эталонов на основе метода главных компонент;
-	\item алгоритм оптимизации размерности параметрических портретов с использованием полиномов Чебышёва;
-	\item алгоритм распознавания команд по нескольким эталонам с использование байесовского подхода и метода комитетов;
-	\item алгоритм распознавания команд нейронными сетями глубокого обучения, способных обучаться на выборках малого размера.
+	\item алгоритм оптимизации эталонов на основе метода, в котором искомый эталон формируется как линейная комбинация главных компонент, оптимизирующая предложенный критерий качества;
+	\item алгоритм оптимизации размерности параметрических портретов с предложенным выделением значимой информации с использованием полиномов Чебышёва;
+	\item алгоритм распознавания команд по нескольким эталонам, отличающийся применением предварительного оценивания с использованием байесовского подхода и метода комитетов;
+	\item алгоритм распознавания команд нейронными сетями глубокого обучения, отличающийся обучением на выборках малого размера.
 \end{itemize}
 
-\textbf{Практическая значимость.}
-Полученная в результате работы совокупность алгоритмов обеспечивает высокую точность распознавания речевых команд при различных уровнях шума, в том числе с учётом случая статически неустойчивого самолёта.
+\textbf{Теоретическая и практическая значимость.}
+Полученная в результате работы совокупность алгоритмов повышает точность распознавания речевых команд при различных уровнях шума, в том числе с учётом случая статически неустойчивого самолёта.
 Результаты работы могут быть применены в учебном процессе и в ходе разработки алгоритмического обеспечения речевого интерфейса пилота для таких задач, как отображение информации, выбор частоты радиооборудования, прокладка маршрута, управление системой опознавания и датчиками, запрос запаса топлива.
 
-\textbf{Положения, выносимые на защиту:}
+\textbf{Основные положения, выносимые на защиту:}
 \begin{enumerate}[label={\arabic*)}]
-	\item Разработан алгоритм разбиения речевых команд на фонетически однородные части, отличающийся от существующих применением модифицированного метода динамического программирования.
-	\item Разработан алгоритм оптимизации эталонов, отличающийся от существующих тем, что искомый эталон формируется как линейная комбинация главных компонент, оптимизирующая заданный критерий качества.
-	\item Разработан алгоритм оптимизации размерности параметрических портретов, отличающийся выделением наиболее значимых составляющих с использованием полиномов Чебышёва.
-	\item Разработан алгоритм распознавания команд по нескольким эталонам, отличающийся применением последовательного оценивания с расчётом апостериорных байесовских вероятностей.
-	\item Разработан алгоритм распознавания команд нейронными сетями глубокого обучения, отличающийся от существующих обучением на выборке малого размера.
+	\item Алгоритм разбиения речевых команд на фонетически однородные части, отличающийся от существующих применением модифицированного метода динамического программирования.
+	\item Алгоритм оптимизации эталонов, отличающийся от существующих тем, что искомый эталон формируется как линейная комбинация главных компонент, оптимизирующая заданный критерий качества.
+	\item Алгоритм оптимизации размерности параметрических портретов, отличающийся выделением наиболее значимых составляющих с использованием полиномов Чебышёва.
+	\item Алгоритм распознавания команд по нескольким эталонам, отличающийся применением последовательного оценивания с расчётом апостериорных байесовских вероятностей.
+	\item Алгоритм распознавания команд нейронными сетями глубокого обучения, отличающийся от существующих обучением на выборке малого размера.
 \end{enumerate}
 
-\textbf{Достоверность результатов} обеспечивается корректным применением математической статистики, методов идентификации и анализа данных, подтверждением полученных теоретических результатов с помощью экспериментов, а также сравнением с известными результатами, ранее полученными другими авторами.
+\textbf{Достоверность результатов} обеспечивается корректным применением математической статистики, методов идентификации и анализа данных, подтверждением полученных теоретических результатов с помощью экспериментов на различных наборах входных данных с несколькими уровнями шума, а также сравнением с известными результатами, ранее полученными другими авторами.
 
 % версия для автореферата
+\textbf{Публикации.}
+По теме диссертации автором опубликовано 4 научных работы [\hyperref[korsun2016automatic]{1}--\hyperref[korsun2018optimal]{4}]: 3 из них в изданиях из списка, рекомендованного ВАК РФ [\hyperref[korsun2016automatic]{1}--\hyperref[korsun2018usage]{3}], и 2 из них в изданиях, индексируемых в международных системах цитирования Scopus и Web of Science [\hyperref[korsun2016automatic]{1};\hyperref[korsun2018optimal]{4}].
+
+%\textbf{Апробация работы.}
+%Основные результаты исследования докладывались на следующих конференциях:
+%\begin{enumerate}[label={\arabic*)}]
+%	\item Доклад <<Получение оптимального эталона с помощью метода главных компонент>> на Всероссийской научно-технической конференции <<XII Научные чтения по авиации, посвящённые памяти Н.Е. Жуковского>> (Москва, 2015)
+%	[\hyperref[poliyev2015pca]{5}].
+%	\item Доклад <<Алгоритм разбиения слов на однородные части в интересах разработки речевого интерфейса бортового оборудования>> на Восьмом Международном Аэрокосмическом Конгрессе IAC'15 (Москва, 2015)
+%	[\hyperref[poliyev2015split]{6}].
+%	\item Доклад <<Разработка модифицированного алгоритма динамического программирования для разбиения слов на однородные части>> на Всероссийской научно-технической конференции <<XIII Научные чтения по авиации, посвящённые памяти Н.Е. Жуковского>> (Москва, 2016)
+%	[\hyperref[poliyev2016dynamic]{7}].
+%	\item Доклад <<Определение оптимального разбиения слова на однородные участки на основе матрицы корреляционного портрета>> на Юбилейной Всероссийской научно-технической конференции <<Авиационные системы в XXI веке>> (Москва, 2016)
+%	[\hyperref[poliyev2016split]{8}; \hyperref[poliyev2017split]{9}].
+%	\item Доклад <<Разработка метода анализа фонетически однородных частей слов естественного языка>> на Второй Международной научно-практической конференции <<Эрго-2016: Человеческий фактор в сложных технических системах и средах>> (Санкт-Петербург, 2016)
+%	[\hyperref[poliyev2016natural]{10}].
+%	\item Доклад <<The algorithm of an optimal word pattern synthesis using principal component analysis>> на международном семинаре Workshop on Contemporary Materials and Technologies in the Aviation Industry --- CMTAI (Москва, 2016)
+%	[\hyperref[poliyev2016pca]{11}].
+%	\item Доклад <<Применение формулы Байеса для распознавания слов с использованием нескольких эталонов>> на Всероссийской научно-технической конференции <<Навигация, наведение и управление летательными аппаратами>> (Москва, 2017)
+%	[\hyperref[poliyev2017bayes]{12}].
+%	\item Доклад <<Разработка алгоритма распознавания слов в условиях шума на основе свёрточных нейронных сетей>> на Девятом Международном Аэрокосмическом Конгрессе IAC'18 (Москва, 2018)
+%	[\hyperref[poliyev2018cnn]{13}].
+%	\item Доклад <<Распознавание речевых команд на основе свёрточных нейронных сетей>> на Всероссийской научно-технической конференции <<Моделирование авиационных систем>> (Москва, 2018)
+%	[\hyperref[poliyev2018cnn2]{14}].
+%\end{enumerate}
+
 \textbf{Апробация работы.}
 Основные результаты исследования докладывались на следующих конференциях:
-\begin{enumerate}[label={\arabic*)}]
-	\item Доклад <<Получение оптимального эталона с помощью метода главных компонент>> на Всероссийской научно-технической конференции <<XII Научные чтения по авиации, посвящённые памяти Н.Е. Жуковского>> (Москва, 2015) \cite{poliyev2015pca}.
-	\item Доклад <<Алгоритм разбиения слов на однородные части в интересах разработки речевого интерфейса бортового оборудования>> на Восьмом Международном Аэрокосмическом Конгрессе IAC'15 (Москва, 2015) \cite{poliyev2015split}.
-	\item Доклад <<Разработка модифицированного алгоритма динамического программирования для разбиения слов на однородные части>> на Всероссийской научно-технической конференции <<XIII Научные чтения по авиации, посвящённые памяти Н.Е. Жуковского>> (Москва, 2016) \cite{poliyev2016dynamic}.
-	\item Доклад <<Определение оптимального разбиения слова на однородные участки на основе матрицы корреляционного портрета>> на Юбилейной Всероссийской научно-технической конференции <<Авиационные системы в XXI веке>> (Москва, 2016) \cite{poliyev2016split, poliyev2017split}.
-	\item Доклад <<Разработка метода анализа фонетически однородных частей слов естественного языка>> на Второй Международной научно-практической конференции <<Эрго-2016: Человеческий фактор в сложных технических системах и средах>> (Санкт-Петербург, 2016) \cite{poliyev2016natural}.
-	\item Доклад <<The algorithm of an optimal word pattern synthesis using principal component analysis>> на международном семинаре Workshop on Contemporary Materials and Technologies in the Aviation Industry --- CMTAI (Москва, 2016) \cite{poliyev2016pca}.
-	\item Доклад <<Применение формулы Байеса для распознавания слов с использованием нескольких эталонов>> на Всероссийской научно-технической конференции <<Навигация, наведение и управление летательными аппаратами>> (Москва, 2017) \cite{poliyev2017bayes}.
-	\item Доклад <<Разработка алгоритма распознавания слов в условиях шума на основе свёрточных нейронных сетей>> на Девятом Международном Аэрокосмическом Конгрессе IAC'18 (Москва, 2018) \cite{poliyev2018cnn}.
-	\item Доклад <<Распознавание речевых команд на основе свёрточных нейронных сетей>> на Всероссийской научно-технической конференции <<Моделирование авиационных систем>> (Москва, 2018) \cite{poliyev2018cnn2}.
-\end{enumerate}
+Всероссийская научно-техническая конференция <<XII Научные чтения по авиации, посвящённые памяти Н.Е. Жуковского>> (Москва, 2015)
+[\hyperref[poliyev2015pca]{5}],
+Восьмой Международный Аэрокосмический Конгресс IAC'15 (Москва, 2015)
+[\hyperref[poliyev2015split]{6}],
+Всероссийская научно-техническая конференция <<XIII Научные чтения по авиации, посвящённые памяти Н.Е. Жуковского>> (Москва, 2016)
+[\hyperref[poliyev2016dynamic]{7}],
+Юбилейная Всероссийская научно-техническая конференция <<Авиационные системы в XXI веке>> (Москва, 2016)
+[\hyperref[poliyev2016split]{8}; \hyperref[poliyev2017split]{9}],
+Вторая Международная научно-практическая конференция <<Эрго-2016: Человеческий фактор в сложных технических системах и средах>> (Санкт-Петербург, 2016)
+[\hyperref[poliyev2016natural]{10}],
+международный семинар Workshop on Contemporary Materials and Technologies in the Aviation Industry --- CMTAI (Москва, 2016)
+[\hyperref[poliyev2016pca]{11}],
+Всероссийская научно-техническая конференция <<Навигация, наведение и управление летательными аппаратами>> (Москва, 2017)
+[\hyperref[poliyev2017bayes]{12}],
+Девятый Международный Аэрокосмический Конгресс IAC'18 (Москва, 2018)
+[\hyperref[poliyev2018cnn]{13}],
+Всероссийская научно-техническая конференция <<Моделирование авиационных систем>> (Москва, 2018)
+[\hyperref[poliyev2018cnn2]{14}].
 
-\textbf{Публикации.}
-По теме диссертации автором опубликовано 4 научных работы \cite{korsun2016automatic,poliyev2017pca,korsun2018usage,korsun2018optimal}: 3 из них в изданиях из списка, рекомендованного ВАК РФ \cite{korsun2016automatic,poliyev2017pca,korsun2018usage}, и 2 из них в изданиях, входящих в базу Scopus и базу Web of Science \cite{korsun2016automatic,korsun2018optimal}.
 
 % версия для диссертации
 %\textbf{Апробация работы.}
