--- a/common/data.tex
+++ b/common/data.tex
@@ -57,9 +57,9 @@
 \newcommand{\supervisorRegaliaShort}     % Научный руководитель, регалии
 {д-р~техн.~наук,~проф.}
 \newcommand{\supervisorJobPlace}      	 % Научный руководитель, место работы
-{ФГУП <<Государственный научно-исследовательский институт авиационных систем>>}
+{МАИ}
 \newcommand{\supervisorJobPost}          % Научный руководитель, должность
-{начальник лаборатории}
+{профессор кафедры <<Проектирование и сертификация авиационной техники>> Института~№1 <<Авиационная техника>>}
 
 %% \newcommand{\supervisorTwoDead}{}        % Рисовать рамку вокруг фамилии
 %% \newcommand{\supervisorTwoFio}           % Второй научный руководитель, ФИО
@@ -106,7 +106,7 @@
 \newcommand{\defenseCouncilNumber}     % Защита, номер диссертационного совета
 {Д\,212.125.12}
 \newcommand{\defenseCouncilTitle}      % Защита, учреждение диссертационного совета
-{ФГБОУ ВО <<Московский авиационный институт (национальном исследовательском университете)>>}
+{ФГБОУ ВО <<Московский авиационный институт (национальный исследовательский университет)>>}
 \newcommand{\defenseCouncilAddress}    % Защита, адрес учреждение диссертационного совета
 {125993, Москва, A-80, ГСП-3, Волоколамское шоссе, д. 4}
 \newcommand{\defenseCouncilPhone}      % Телефон для справок
