сделал автореферат чб

--- a/Synopsis/content.tex
+++ b/Synopsis/content.tex
@@ -243,7 +243,7 @@ P(H_i|A_k^{\Delta Z}) = \frac{P(H_i) P(A_k|H_i) P(\Delta Z|H_i)}{\sum_{j=1}^M P(
 В нём можно выделить 6 хорошо различимых звуков, по одному на каждую букву слова, что хорошо видно на рисунке \ref{fig:3_1} и в таблице \ref{tab:3_1}.
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.9\textwidth]{word_1000.png}
+	\includegraphics[width=0.9\textwidth]{word_1000_gray.png}
 	\caption{Результаты разбиения слова <<тысяча>>}
 	\label{fig:3_1}
 \end{figure}
@@ -391,7 +391,7 @@ P(H_i|A_k^{\Delta Z}) = \frac{P(H_i) P(A_k|H_i) P(\Delta Z|H_i)}{\sum_{j=1}^M P(
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=1.0\textwidth]{cnn_my.png}
+	\includegraphics[width=1.0\textwidth]{cnn_my_gray.png}
 	\caption{Архитектура используемой свёрточной нейронной сети}
 	\label{fig:4_1}
 \end{figure}
@@ -422,7 +422,7 @@ P(H_i|A_k^{\Delta Z}) = \frac{P(H_i) P(A_k|H_i) P(\Delta Z|H_i)}{\sum_{j=1}^M P(
 Записи каждого диктора разбивались на 2 части --- на первой части обучалась свёрточная нейронная сеть, а вторая часть использовалась в качестве тестовой выборки.
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=1.0\textwidth]{cnn_self_noise.png}
+	\includegraphics[width=1.0\textwidth]{cnn_self_noise_gray.png}
 	\caption{Результаты распознаваний при различных уровнях шума при обучении на том же дикторе, указан процент ошибок распознаваний}
 	\label{fig:cnn_self_noise}
 \end{figure}
