исправил название специальности

--- a/common/data.tex
+++ b/common/data.tex
@@ -19,7 +19,7 @@
 \newcommand{\thesisSpecialtyNumber}    % Диссертация, специальность, номер
 {05.13.01}
 \newcommand{\thesisSpecialtyTitle}     % Диссертация, специальность, название (название взято с сайта ВАК для примера)
-{Системный анализ, управление и обработка информации}
+{Системный анализ, управление и обработка информации (авиационная и ракетно-космическая техника)}
 %% \newcommand{\thesisSpecialtyTwoNumber} % Диссертация, вторая специальность, номер
 %% {\todo{XX.XX.XX}}
 %% \newcommand{\thesisSpecialtyTwoTitle}  % Диссертация, вторая специальность, название
